[package]
name = "esp-one-wire-bus"
version = "0.1.1"
authors = ["Nathan Fox <fuchsnj@gmail.com>", "Gerhardus Cornelis van Zyl <gerhard@zovra.tech>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/zovra/esp32-one-wire-bus"
edition = "2021"
keywords = ["embedded", "esp32", "onewire", "esp-hal-driver"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust implementation of the 1-Wire protocol for esp-hal
"""

[dependencies]
esp-hal = {version="0.16.1"}

[features]
esp32 = ["esp-hal/esp32"]

esp32c2 = ["esp-hal/esp32c2"]

esp32c3 = ["esp-hal/esp32c3"]

esp32c6 = ["esp-hal/esp32c6"]

esp32h2 = ["esp-hal/esp32h2"]

esp32p4 = ["esp-hal/esp32p4"]

esp32s2 = ["esp-hal/esp32s2"]

esp32s3 = ["esp-hal/esp32s3"]
